@@ -4,6 +4,7 @@ Version 2.6.2.1 'Harding Grim':
 	- (in progress) DTLS support in Cygwin
 	- TODO: --pidfile
 	- Issue 52 (RFC 6062) fixed
+	- Fingerprint added to the indications
 
 08/11/2013 Oleg Moskalenko <mom040267@gmail.com>
 Version 2.6.1.4 'Harding Grim':
